# tinkoff-backend-school

./: .gitmodules  README.md
async-chat/: Makefile  README.md  client.py  docker-compose.yml  pyproject.toml
async-chat/app/: config.py  connections.py  dao.py  handlers.py  main.py  redis.py  schema.py  utils.py
async-chat/tests/: conftest.py  test_app.py
filmash/: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
filmash/app/: config.py  main.py  utils.py  validators.py
filmash/app/db/: models.py  utils.py
filmash/tests/: conftest.py  test_comments.py  test_filtering_films.py  test_scores.py  test_users.py
grep/: .gitlab-ci.yml  Makefile  README.md  requirements.txt  setup.cfg  setup.py
grep/myapp/: app.py
grep/tests/: conftest.py  test_myapp.py
image-resizer/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
image-resizer/app/: config.py  main.py  schema.py  utils.py
image-resizer/app/routers/: tasks.py
image-resizer/tests/: conftest.py  test_app.py  test_utils.py
rest-market/: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
rest-market/app/: __init__.py  config.py  crypto.py  exceptions.py  pydantic_models.py  users.py
rest-market/app/db/: models.py  types.py  utils.py
rest-market/tests/: conftest.py  test_app.py
tic-tac-toe/: .gitignore  Config.py  GameLoopController.py  PlayingArea.py  README.md  ScreenComponents.py  TicTacToe.py  main.py
todo/: .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.cfg
todo/tests/: conftest.py  test_app.py
todo/todo_list/: Paginator.py  app.py  config.py  models.py
todo/todo_list/templates/: todo.html
web-scraper/: Makefile  README.md  pyproject.toml  setup.py
web-scraper/app/: config.py  main.py  utils.py  validators.py
web-scraper/tests/: conftest.py  test_app.py
web-scraper/tests/resources/: articles_list.html  sony_article.html
