[tool.poetry]
name = "homework4"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
aioredis = "^1.3.1"
websockets = "^8.1"
aiohttp = "^3.7.4"
uvicorn = "^0.13.4"
aioconsole = "^0.3.1"
pytest-mock = "^3.5.1"
mockaioredis = "^0.0.16"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
fakeredis = "^1.5.0"
async-asgi-testclient = "^1.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"
unify = "^0.5"
flake8 = "^3.8.4"
pylint = "^2.7.1"
mypy = "^0.812"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
